Added the Hero-section structure

--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>team.</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin&family=Open+Sans:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="hero-section">
+        <div class="container">
+            <nav class="hero-nav">
+                <div class="nav-icon">
+                    <h1 class="team-icon">team.</h1> 
+                </div>
+                <div class="nav-links">
+                    <ul class="nav-ul">
+                       <a class="nav-anger" href=""> <li>Services</li> </a>
+                       <a class="nav-anger" href=""> <li>Product</li> </a>
+                       <a class="nav-anger" href=""> <li>Contact</li> </a>
+                       <a class="nav-anger" href=""> <li>Login</li> </a>
+                      <button class="nav-button">Try it Free</button>
+                    </ul>
+                </div>
+            </nav>
+            <div class="hero-texts">
+                <div class="hero-main-text">
+                    <h1 class="hero-main-h1">Instant Collabaration for Remote teams</h1>
+                </div>
+                <div class="hero-para">
+                    <p>All in one place for your remote team to chat collaborate and track project progress</p>
+                </div>
+               <div class="hero-button">
+               <input  class="input-box"  type="text">
+               <button class="input-btn">Get Early Access</button>
+              </div>
+            </div>
+        </div>
+    </section>
+    <section class="hub-section">
+         <div class="container hub">
+             <div class="text">
+                  <h2>Your hub for team work</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rem expedita laudantium enim adipisci dolorem, sit recusandae vitae exercitationem, non numquam neque, totam doloremque minus veritatis. Nulla aliquid voluptatum quisquam</p>
+                  <p>Learn More</p>
+             </div>
+             <div class="image">
+            <img src="s" alt="leomessi">
+             </div>
+         </div>
+    </section>
 </body>
 </html>
