Added the html structure

--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
     </section>
     <section class="hub-section">
          <div class="container hub">
-             <div class="text">
-                  <h2>Your hub for team work</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rem expedita laudantium enim adipisci dolorem, sit recusandae vitae exercitationem, non numquam neque, totam doloremque minus veritatis. Nulla aliquid voluptatum quisquam</p>
-                  <p>Learn More</p>
+             <div class="hub-text">
+                  <h2 class="hub-h2">Your hub for team work</h2>
+                  <p class="hub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rem expedita laudantium enim adipisci dolorem, sit recusandae vitae exercitationem, non numquam neque, totam .</p>
+                  <p class="hub-learn">Learn More →</p>
              </div>
-             <div class="image">
-            <img src="s" alt="leomessi">
+             <div class="hub-image">
+            <img class="assets-img" src="Assets/event 1.svg" alt="meeting pic">
+            <img class="assets-image" src="Assets/ooto Meetings 1.svg" alt="oto img">
              </div>
          </div>
     </section>
+  
 </body>
 </html>
