Added the task section html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
              </div>
          </div>
     </section>
-  
+    <section class="task">
+        <div class="container task">
+           <div class="task-img">
+               <img src="s" alt="leomessi">
+           </div>
+           <div class="Text">
+           <h2>Simple Task managment</h2>
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab similique necessitatibus ratione illum nostrum. Eius dolorem veritatis, consequuntur, veniam praesentium quia ipsa, magni </p>
+           <p>Learn More</p>
+           </div>
+        </div>
+       </section>
 </body>
 </html>
