added the 3 rd section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <div class="hub-text">
                   <h2 class="hub-h2">Your hub for team work</h2>
                   <p class="hub-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rem expedita laudantium enim adipisci dolorem, sit recusandae vitae exercitationem, non numquam neque, totam .</p>
-                  <p class="hub-learn">Learn More →</p>
+                <a class="hub-learn" href="">Learn More →</a> 
              </div>
              <div class="hub-image">
             <img class="assets-img" src="Assets/event 1.svg" alt="meeting pic">
@@ -59,12 +59,12 @@
     <section class="task">
         <div class="container task">
            <div class="task-img">
-               <img src="s" alt="leomessi">
+               <img src="Assets/brooke-cagle-Rat0xIB5X1c-unsplash 2.png" alt="leomessi">
            </div>
-           <div class="Text">
-           <h2>Simple Task managment</h2>
-           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab similique necessitatibus ratione illum nostrum. Eius dolorem veritatis, consequuntur, veniam praesentium quia ipsa, magni </p>
-           <p>Learn More</p>
+           <div class="task-text">
+           <h2 class="task-text-h2">Simple Task managment</h2>
+           <p class="task-para-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab similique necessitatibus ratione illum nostrum. Eius dolorem veritatis, consequuntur, veniam praesentium quia ipsa, magni </p>
+         <a class="task-anger" href="">Learn More →</a>
            </div>
         </div>
        </section>
