Updated the index of the

--- a/index.html
+++ b/index.html
@@ -70,5 +70,20 @@
            </div>
         </div>
        </section>
+       <section class="schedule-section">
+        <div class="container schedule">
+        <div class="schedule-text">
+         <h2 class="schedule-h2">Schedule that actually works</h2>
+         <p class="schedule-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat officiis mollitia temporibus ullam vel voluptas, maxime .</p>
+         <p class="schedule-para2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, quo reiciendis quos quia tempora quaerat error voluptate possimus suscipit nihil amet, eveniet nam delectus beatae, sequi </p>
+         <a class="schedule-anger" href="">Learn More →</a>
+        </div>
+        <div class="schedule-img">
+            <img class="schedule-calender" src="Assets/calender.svg" alt="calender">
+           <img class="schedule-main-img" src="Assets/brooke-cagle-_6cz9KUvnxM-unsplash 1.jpg" alt="shahil leo">
+        </div>
+    </div>
+       </section>
+     
 </body>
 </html>
