Added the structure

--- a/index.html
+++ b/index.html
@@ -83,7 +83,69 @@
            <img class="schedule-main-img" src="Assets/brooke-cagle-_6cz9KUvnxM-unsplash 1.jpg" alt="shahil leo">
         </div>
     </div>
+    <!-- review section -->
        </section>
-     
+       <section class="review">
+          <div class="container review">
+            <div class="card-header">
+                <h1 class="card-title">What people say about our service</h1>
+            </div>
+            <div class="cards">
+                      <div class="card-1">
+                    <img src="Assets/Stars.svg" alt="">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto atque eveniet sequi enim pariatur ratione tempora ab porro magnam </p>
+                    <div class="card-profile">
+                        <div class="profile-img">
+                            <img src="Assets/PXL_20220718_143443803.NIGHT.jpg" alt="card-image" class="card-img">
+                        </div>
+                        <div class="profile-title">
+                            <h3 class="title-3">Leo messi</h3> 
+                            <p>Argentinian Footballer</p>
+                           </div>
+                        </div>       
+                </div>                
+                      <div class="card-1">
+                    <img src="Assets/Stars.svg" alt="">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto atque eveniet sequi enim pariatur ratione tempora ab porro magnam </p>
+                    <div class="card-profile">
+                        <div class="profile-img">
+                            <img src="Assets/PXL_20220718_143443803.NIGHT.jpg" alt="card-image" class="card-img">
+                        </div>
+                        <div class="profile-title">
+                            <h3 class="title-3">Leo messi</h3> 
+                            <p>Argentinian Footballer</p>
+                           </div>
+                        </div>       
+                </div>                
+                      <div class="card-1">
+                    <img src="Assets/Stars.svg" alt="">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto atque eveniet sequi enim pariatur ratione tempora ab porro magnam </p>
+                    <div class="card-profile">
+                        <div class="profile-img">
+                            <img src="Assets/PXL_20220718_143443803.NIGHT.jpg" alt="card-image" class="card-img">
+                        </div>
+                        <div class="profile-title">
+                            <h3 class="title-3">Leo messi</h3> 
+                            <p>Argentinian Footballer</p>
+                           </div>
+                        </div>       
+                </div>                
+                      <div class="card-1">
+                    <img src="Assets/Stars.svg" alt="">
+                    <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto atque eveniet sequi enim pariatur ratione tempora ab porro magnam </p>
+                    <div class="card-profile">
+                        <div class="profile-img">
+                            <img src="Assets/PXL_20220718_143443803.NIGHT.jpg" alt="card-image" class="card-img">
+                        </div>
+                        <div class="profile-title">
+                            <h3 class="title-3">Leo messi</h3> 
+                            <p>Argentinian Footballer</p>
+                           </div>
+                        </div>       
+                </div>                                    
+            </div>
+           
+          </div>
+       </section>
 </body>
 </html>
