--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cabin&family=Open+Sans:wght@300;500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin&family=Mulish:wght@200;400&family=Open+Sans:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="hero-section">
         <div class="container">
             <nav class="hero-nav">
                 <div class="nav-icon">
-                    <h1 class="team-icon">team.</h1> 
+                    <h1 class="team-icon">team<span style="color: #62cef5; border-radius: 6px;">.</span></h1> 
                 </div>
                 <div class="nav-links">
                     <ul class="nav-ul">
@@ -37,7 +39,7 @@
                     <p>All in one place for your remote team to chat collaborate and track project progress</p>
                 </div>
                <div class="hero-button">
-               <input  class="input-box"  type="text">
+               <input  class="input-box" placeholder="Enter something" type="text">
                <button class="input-btn">Get Early Access</button>
               </div>
             </div>
@@ -144,7 +146,33 @@
                         </div>       
                 </div>                                    
             </div>
-           
+          </div>
+       </section>
+       <section class="footer-section">
+          <div class="container footer">
+          <div class="footer-column-1">
+             <h3 class="footer-icon">team<span style="color: #62cef5; border-radius: 6px;">.</span></h3>
+             <h2 class="footer-para">Collaboration platform for modern items</h2>
+          </div>
+          <div class="footer-column-2">
+            <h3 >FEATURES</h3>
+             <h5 class="footer-para">About Us</h5>
+              <h5 class="footer-para">Careers</h5>    
+              <h5 class="footer-para">Contact Us</h5>    
+          </div>
+          <div class="footer-column-3">
+            <h3>CONTACT US</h3>
+            <h5 class="footer-para">info@chatapp.com</h5>
+            <h5 class="footer-para">1-800-200-300</h5>    
+            <h5 class="footer-para">3500 Deer Creek Rd
+                Palo Alto, CA</h5>
+          </div>
+          <div class="footer-column-4">
+            <h3>STAY UP TO DATE</h3>
+            <h5 class="footer-para last">Subsribe to our newsLetter
+            </h5>
+            <input class="footer-input" type="text">
+          </div>
           </div>
        </section>
 </body>
