Updated all the problems in the Hero-section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Mulish:wght@200;400&family=Open+Sans:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- hero-section -->
     <section class="hero-section">
         <div class="container">
             <nav class="hero-nav">
@@ -45,6 +46,7 @@
             </div>
         </div>
     </section>
+    <!-- hero-section -->
     <section class="hub-section">
          <div class="container hub">
              <div class="hub-text">
