latest updated the hub section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,12 @@
                 <a class="hub-learn" href="">Learn More →</a> 
              </div>
              <div class="hub-image">
-            <img class="assets-img" src="Assets/event 1.svg" alt="meeting pic">
-            <img class="assets-image" src="Assets/ooto Meetings 1.svg" alt="oto img">
+                <div>
+                    <img class="assets-main-img" src="Assets/ooto Meetings 1.svg" alt="oto img">
+                </div>
+                 <div>
+                     <img class="assets-small-img" src="Assets/event 1.svg" alt="meeting pic">
+                 </div>
              </div>
          </div>
     </section>
