completed the section from updating

--- a/index.html
+++ b/index.html
@@ -64,20 +64,26 @@
              </div>
          </div>
     </section>
-    <section class="task">
+    <section class="task section">
         <div class="container task">
            <div class="task-img">
-               <img class="task-main-img" src="Assets/brooke-cagle-Rat0xIB5X1c-unsplash 2.png" alt="leomessi">
-           </div>
+                <img class="task-main-img" src="Assets/brooke-cagle-Rat0xIB5X1c-unsplash 2.png" alt="leomessi">
+           <div>
+            <img class="task-small-img-3" src="Assets/event 3.svg" alt="">
+        </div>
+        <div>
+            <img class="task-small-img-2" src="Assets/event 2.svg" alt="">
+        </div>
+    </div>
            <div class="task-text">
            <h2 class="task-text-h2">Simple Task managment</h2>
-           <img class="task-assets3" src="Assets/event 3.svg" alt="">
-           <img class="task-assets2" src="Assets/event 2.svg" alt="">
+           
            <p class="task-para-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab similique necessitatibus ratione illum nostrum. Eius dolorem veritatis, consequuntur, veniam praesentium quia ipsa, magni </p>
          <a class="task-anger" href="">Learn More →</a>
            </div>
         </div>
        </section>
+       <!-- schedule section -->
        <section class="schedule-section">
         <div class="container schedule">
         <div class="schedule-text">
