updated the schedule section

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
          <a class="schedule-anger" href="">Learn More →</a>
         </div>
         <div class="schedule-img">
-            <img class="schedule-calender" src="Assets/calender.svg" alt="calender">
-           <img class="schedule-main-img" src="Assets/brooke-cagle-_6cz9KUvnxM-unsplash 1.jpg" alt="shahil leo">
+            <img src="Assets/brooke-cagle-_6cz9KUvnxM-unsplash 1.jpg" alt="shahil leo">
+            <div class="schedule-main-div">
+                <img src="Assets/calender.svg" alt="calender">
+            </div>
         </div>
     </div>
     <!-- review section -->
