--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                     <p class="card-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto atque eveniet sequi enim pariatur ratione tempora ab porro magnam </p>
                     <div class="card-profile">
                         <div class="profile-img">
-                            <img src="Assets/PXL_20220718_143443803.NIGHT.jpg" alt="card-image" class="card-img">
+                            <img src="Assets/1989b8fc299dd1237f0fcad58576734a.jpg" alt="card-image" class="card-img">
                         </div>
                         <div class="profile-title">
                             <h3 class="title-3">Leo messi</h3> 
-                            <p>Argentinian Footballer</p>
+                            <p class="profile-para">Argentinian Footballer</p>
                            </div>
                         </div>       
                 </div>                
@@ -129,7 +129,7 @@
                         </div>
                         <div class="profile-title">
                             <h3 class="title-3">Leo messi</h3> 
-                            <p>Argentinian Footballer</p>
+                            <p class="profile-para">Argentinian Footballer</p>
                            </div>
                         </div>       
                 </div>                
@@ -142,7 +142,7 @@
                         </div>
                         <div class="profile-title">
                             <h3 class="title-3">Leo messi</h3> 
-                            <p>Argentinian Footballer</p>
+                            <p class="profile-para">Argentinian Footballer</p>
                            </div>
                         </div>       
                 </div>                
@@ -155,11 +155,16 @@
                         </div>
                         <div class="profile-title">
                             <h3 class="title-3">Leo messi</h3> 
-                            <p>Argentinian Footballer</p>
+                            <p class="profile-para">Argentinian Footballer</p>
                            </div>
                         </div>       
                 </div>                                    
             </div>
+            <div class="profile-button-swipe">
+              <button> <img  src="Assets/arrow_back_24px.svg" alt=""></button>
+              <button>  <img src="Assets/arrow_forward_24px.svg" alt=""></button> 
+            </div>
+          
           </div>
        </section>
        <section class="footer-section">
