everything is perfect

--- a/index.html
+++ b/index.html
@@ -161,12 +161,19 @@
                 </div>                                    
             </div>
             <div class="profile-button-swipe">
-              <button> <img  src="Assets/arrow_back_24px.svg" alt=""></button>
-              <button>  <img src="Assets/arrow_forward_24px.svg" alt=""></button> 
+              <button class="profile-arrow"> <svg height="50px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12h-15m0 0l6.75 6.75M4.5 12l6.75-6.75" />
+              </svg>
+               </button>
+              <button class="profile-arrow">  <svg height="50px" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" />
+              </svg>
+              </button> 
             </div>
           
           </div>
        </section>
+       <!-- footer-section -->
        <section class="footer-section">
           <div class="container footer">
           <div class="footer-column-1">
@@ -174,22 +181,21 @@
              <h2 class="footer-para">Collaboration platform for modern items</h2>
           </div>
           <div class="footer-column-2">
-            <h3 >FEATURES</h3>
-             <h5 class="footer-para">About Us</h5>
-              <h5 class="footer-para">Careers</h5>    
-              <h5 class="footer-para">Contact Us</h5>    
+            <h3 >COMPANY</h3>
+             <a href="" class="footer-para">About Us</a> 
+             <a href="" class="footer-para">Contact us</a> 
+             <a href="" class="footer-para">Careers</a> 
           </div>
           <div class="footer-column-3">
             <h3>CONTACT US</h3>
-            <h5 class="footer-para">info@chatapp.com</h5>
-            <h5 class="footer-para">1-800-200-300</h5>    
-            <h5 class="footer-para">3500 Deer Creek Rd
-                Palo Alto, CA</h5>
+           <a href="" class="footer-para">info@chatapp.com</a>   
+           <a href="" class="footer-para">1-800-200-300</a>   
+           <a href="" class="footer-para">3500 Deer Creek Rd
+            Palo Alto, CA</a>
           </div>
           <div class="footer-column-4">
             <h3>STAY UP TO DATE</h3>
-            <h5 class="footer-para last">Subsribe to our newsLetter
-            </h5>
+            <a href="" class="footer-para last">Subscribe to our newsLetter</a>
             <input class="footer-input" type="text">
           </div>
           </div>
