updated the email address in the website

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </div>
           <div class="footer-column-3">
             <h3>CONTACT US</h3>
-           <a href="" class="footer-para">info@chatapp.com</a>   
+           <a href="" class="footer-para">mshahilkv@gmail.com</a>   
            <a href="" class="footer-para">1-800-200-300</a>   
            <a href="" class="footer-para">3500 Deer Creek Rd
             Palo Alto, CA</a>
